[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/UI/TittleLetters/D.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/TittleLetters/n.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/TittleLetters/u.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/TittleLetters/g.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/TittleLetters/o.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/TittleLetters/e.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/TittleLetters/R.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/TittleLetters/i.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/TittleLetters/f.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/TittleLetters/b.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/TittleLetters/t.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/TittleLetters/s.png" type="Texture" id=12]
[ext_resource path="res://Resources/title_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://UI/TittleScreen.gd" type="Script" id=14]
[ext_resource path="res://UI/Optionss.tscn" type="PackedScene" id=15]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=16]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 4.0
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Dungeon/D:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 2.125 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dungeon/U:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 2.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 77, 0 ), Vector2( 77, 0 ), Vector2( 77, -8 ), Vector2( 77, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dungeon/N:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.375, 2.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 154, 0 ), Vector2( 154, 0 ), Vector2( 154, -8 ), Vector2( 154, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dungeon/G:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.375, 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 230, 0 ), Vector2( 230, 0 ), Vector2( 230, -8 ), Vector2( 230, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dungeon/E:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.625, 2.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 302, 0 ), Vector2( 302, 0 ), Vector2( 302, -8 ), Vector2( 302, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Dungeon/O:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.625, 0.75, 2.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 374, 0 ), Vector2( 374, 0 ), Vector2( 374, -8 ), Vector2( 374, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Dungeon/N2:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.75, 0.875, 2.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 451, 0 ), Vector2( 451, 0 ), Vector2( 451, -8 ), Vector2( 451, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("FirstBorn/First/F:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.875, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("FirstBorn/First/I:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 1.125, 3.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 0 ), Vector2( 72, 0 ), Vector2( 72, -8 ), Vector2( 72, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("FirstBorn/First/R:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.125, 1.25, 3.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 108, 0 ), Vector2( 108, 0 ), Vector2( 108, -8 ), Vector2( 108, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("FirstBorn/First/S:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.25, 1.375, 3.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 177, 0 ), Vector2( 177, 0 ), Vector2( 177, -8 ), Vector2( 177, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("FirstBorn/First/T:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.375, 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 249, 0 ), Vector2( 249, 0 ), Vector2( 249, -8 ), Vector2( 249, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("FirstBorn/Born/B:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1.5, 1.625, 3.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("FirstBorn/Born/O:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1.625, 1.75, 3.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 74, 0 ), Vector2( 74, 0 ), Vector2( 74, -8 ), Vector2( 74, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("FirstBorn/Born/R:rect_position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1.75, 1.875, 3.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 151, 0 ), Vector2( 151, 0 ), Vector2( 151, -8 ), Vector2( 151, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("FirstBorn/Born/N:rect_position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1.875, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 220, 0 ), Vector2( 220, 0 ), Vector2( 220, -8 ), Vector2( 220, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Animation" id=12]
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TittleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DungeonFirstBorn" type="VBoxContainer" parent="."]
margin_left = 319.0
margin_top = 182.0
margin_right = 841.0
margin_bottom = 408.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dungeon" type="HBoxContainer" parent="DungeonFirstBorn"]
margin_left = 63.0
margin_right = 586.0
margin_bottom = 111.0
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 17.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="TextureRect" parent="DungeonFirstBorn/Dungeon"]
margin_right = 73.0
margin_bottom = 111.0
texture = ExtResource( 1 )

[node name="U" type="TextureRect" parent="DungeonFirstBorn/Dungeon"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 111.0
texture = ExtResource( 3 )

[node name="N" type="TextureRect" parent="DungeonFirstBorn/Dungeon"]
margin_left = 154.0
margin_right = 226.0
margin_bottom = 111.0
texture = ExtResource( 2 )

[node name="G" type="TextureRect" parent="DungeonFirstBorn/Dungeon"]
margin_left = 230.0
margin_right = 298.0
margin_bottom = 111.0
texture = ExtResource( 4 )

[node name="E" type="TextureRect" parent="DungeonFirstBorn/Dungeon"]
margin_left = 302.0
margin_right = 370.0
margin_bottom = 111.0
texture = ExtResource( 6 )

[node name="O" type="TextureRect" parent="DungeonFirstBorn/Dungeon"]
margin_left = 374.0
margin_right = 447.0
margin_bottom = 111.0
texture = ExtResource( 5 )

[node name="N2" type="TextureRect" parent="DungeonFirstBorn/Dungeon"]
margin_left = 451.0
margin_right = 523.0
margin_bottom = 111.0
texture = ExtResource( 2 )

[node name="FirstBorn" type="HBoxContainer" parent="DungeonFirstBorn"]
margin_top = 115.0
margin_right = 649.0
margin_bottom = 226.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 40

[node name="First" type="HBoxContainer" parent="DungeonFirstBorn/FirstBorn"]
margin_right = 317.0
margin_bottom = 111.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="F" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/First"]
margin_right = 68.0
margin_bottom = 108.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 9 )

[node name="I" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/First"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 111.0
texture = ExtResource( 8 )

[node name="R" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/First"]
margin_left = 108.0
margin_right = 173.0
margin_bottom = 111.0
texture = ExtResource( 7 )

[node name="S" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/First"]
margin_left = 177.0
margin_right = 245.0
margin_bottom = 111.0
texture = ExtResource( 12 )

[node name="T" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/First"]
margin_left = 249.0
margin_right = 317.0
margin_bottom = 111.0
texture = ExtResource( 11 )

[node name="Born" type="HBoxContainer" parent="DungeonFirstBorn/FirstBorn"]
margin_left = 357.0
margin_right = 649.0
margin_bottom = 111.0

[node name="B" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/Born"]
margin_right = 70.0
margin_bottom = 111.0
texture = ExtResource( 10 )

[node name="O" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/Born"]
margin_left = 74.0
margin_right = 147.0
margin_bottom = 111.0
texture = ExtResource( 5 )

[node name="R" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/Born"]
margin_left = 151.0
margin_right = 216.0
margin_bottom = 111.0
texture = ExtResource( 7 )

[node name="N" type="TextureRect" parent="DungeonFirstBorn/FirstBorn/Born"]
margin_left = 220.0
margin_right = 292.0
margin_bottom = 111.0
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DungeonFirstBorn"]
autoplay = "default"
playback_speed = 3.0
anims/default = SubResource( 1 )

[node name="MenuOptions" type="VBoxContainer" parent="."]
margin_left = 800.0
margin_top = 706.0
margin_right = 1190.0
margin_bottom = 1019.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="MenuOptions"]
margin_right = 420.0
margin_bottom = 61.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 1, 0.560784, 1 )
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.815686, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.560784, 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="MenuOptions"]
visible = false
margin_top = 65.0
margin_right = 390.0
margin_bottom = 126.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 1, 0.560784, 1 )
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.815686, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.560784, 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="MenuOptions"]
margin_top = 65.0
margin_right = 420.0
margin_bottom = 126.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 1, 0.560784, 1 )
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.815686, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.560784, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="Button" parent="MenuOptions"]
margin_top = 130.0
margin_right = 420.0
margin_bottom = 191.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 1, 0.560784, 1 )
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.815686, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.560784, 1 )
text = "Quit Game"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Options" parent="." instance=ExtResource( 15 )]

[node name="By" type="Label" parent="."]
margin_left = 787.94
margin_top = 970.0
margin_right = 1171.94
margin_bottom = 1031.0
theme = ExtResource( 16 )
custom_colors/font_color = Color( 0.564706, 0.670588, 0.266667, 1 )
text = "Version 1.0
By: Felix Sanchez"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/fade_in = SubResource( 12 )
[connection signal="button_down" from="MenuOptions/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="MenuOptions/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="MenuOptions/QuitGame" to="." method="_on_Quit_Game_button_down"]
[connection signal="popup_hide" from="Options" to="." method="_on_Options_popup_hide"]
